--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "turbo": "next dev --turbo"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@supabase/supabase-js": "^2.33.1",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
+    "emailjs": "^4.0.2",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "fs": "^0.0.1-security",
     "next": "13.4.19",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.28",
     "rc-progress": "^3.5.1",
     "react": "18.2.0",
