--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "turbo": "next dev --turbo"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.2",
+    "@stripe/stripe-js": "^2.1.0",
     "@supabase/supabase-js": "^2.33.1",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
@@ -23,6 +25,7 @@
     "rc-progress": "^3.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^13.3.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
